2004: Fix issue where screen does not fit the browser.

--- a/client/main.css
+++ b/client/main.css
@@ -30,7 +30,7 @@
 }
 
 body {
-  padding: 10px;
+ 
   font-family: sans-serif;
   @apply bg-peach; 
 }
